# xim-rs

./: Cargo.toml  README.md  build.rs  xim-format.yaml
.github/workflows/: check.yml
benches/: rw.rs
examples/: x11rb_client.rs  x11rb_server.rs  xlib_client.rs
examples/util/: handler.rs
src/: all_locales.txt  client.rs  encoding.rs  lib.rs  parser.rs  server.rs  x11rb.rs  xcb.rs  xlib.rs
src/client/: attribute_builder.rs
src/server/: connection.rs
src/server/connection/: im_vec.rs
xim-ctext/: Cargo.toml  README.md
xim-ctext/src/: lib.rs  main.rs
xim-gen/: Cargo.toml
xim-gen/res/: snippet.rs
xim-gen/src/: format_type.rs  lib.rs
xim-parser/: Cargo.toml  README.md  build.rs  xim-format.yaml
xim-parser/src/: attrs.rs  lib.rs  parser.rs
