[workspace]
members = [
    ".",
    "xim-ctext",
    "xim-gen",
    "xim-parser",
]

[package]
name = "xim"
description = "XIM protocol parser, handler"
version = "0.1.0"
authors = ["Riey <creeper844@gmail.com>"]
repository = "https://github.com/Riey/xim-rs"
edition = "2018"
license = "MIT"

[features]
default = ["x11rb-client"]

bootstrap-parser = ["xim-parser/bootstrap"]

client = []
server = []

x11rb-client = ["client", "x11rb"]
xlib-client = ["client", "x11-dl"]

x11rb-server = ["server", "x11rb"]
x11rb-xcb = ["x11rb/allow-unsafe-code"]

[dependencies]
xim-parser = { path = "./xim-parser", version = "0.1.0" }
xim-ctext = { path = "./xim-ctext", version = "0.1.0" }
thiserror = "1.0.22"
log = "0.4.11"
ahash = "0.7.0"

x11rb = { version = "0.8.0", optional = true }
x11-dl = { version = "2.18.5", optional = true }

[dev-dependencies]
criterion = "0.3.3"
pretty_env_logger = "0.4.0"

[[bench]]
name = "rw"
harness = false
