[workspace]
members = [
    ".",
    "xim-ctext",
    "xim-gen",
    "xim-parser",
]

[package]
name = "xim"
description = "XIM protocol parser, handler"
version = "0.2.0"
authors = ["Riey <creeper844@gmail.com>"]
repository = "https://github.com/Riey/xim-rs"
edition = "2018"
license = "MIT"

[features]
default = ["x11rb-client", "std"]

bootstrap-parser = ["xim-parser/bootstrap"]

client = []
server = []

std = ["xim-parser/std", "xim-ctext/std", "ahash/std"]

x11rb-client = ["client", "x11rb", "std"]
xlib-client = ["client", "x11-dl", "std"]

x11rb-server = ["server", "x11rb", "std"]
x11rb-xcb = ["x11rb/allow-unsafe-code", "std"]

[dependencies]
xim-parser = { path = "./xim-parser", version = "0.2.0", default-features = false }
xim-ctext = { path = "./xim-ctext", version = "0.3.0", default-features = false }
log = { version = "0.4.14", default-features = false }
ahash = { version = "0.7.4", default-features = false, features = ["compile-time-rng"] }

x11rb = { version = "0.9.0", optional = true }
x11-dl = { version = "2.18.5", optional = true }
hashbrown = { version = "0.12.3", default-features = false }

[dev-dependencies]
criterion = "0.3.5"
pretty_env_logger = "0.4.0"

[[bench]]
name = "rw"
harness = false
