[workspace]
members = [
    ".",
    "xim-ctext",
    "xim-gen",
    "xim-parser",
]

[package]
name = "xim"
description = "XIM protocol parser, handler"
version = "0.2.3"
authors = ["Riey <creeper844@gmail.com>"]
repository = "https://github.com/Riey/xim-rs"
documentation = "https://docs.rs/xim"
categories = ["x11", "xim", "protocol"]
readme = "README.md"
keywords = ["x11", "xim", "xcb", "xlib", "x11rb"]
edition = "2018"
license = "MIT"
rust-version = "1.61"

[features]
default = ["std"]

bootstrap-parser = ["xim-parser/bootstrap"]

std = ["xim-parser/std", "xim-ctext/std", "ahash/std"]

x11rb-client = ["client", "x11rb", "std"]
xlib-client = ["client", "x11-dl", "std"]

x11rb-server = ["server", "x11rb", "std"]
x11rb-xcb = ["x11rb/allow-unsafe-code", "std"]

# only for internal usage

client = []
server = []

[dependencies]
xim-parser = { path = "./xim-parser", version = "0.2.0", default-features = false }
xim-ctext = { path = "./xim-ctext", version = "0.3.0", default-features = false }
log = { version = "0.4", default-features = false }
ahash = { version = "0.8", default-features = false, features = ["compile-time-rng"] }

x11rb = { version = "0.11", optional = true }
x11-dl = { version = "2.18.5", optional = true }
hashbrown = { version = "0.13", default-features = false }

[[example]]
name = "x11rb_client"
path = "examples/x11rb_client.rs"
required-features = ["x11rb-client"]

[[example]]
name = "x11rb_server"
path = "examples/x11rb_server.rs"
required-features = ["x11rb-server"]

[[example]]
name = "xlib_client"
path = "examples/xlib_client.rs"
required-features = ["xlib-client"]

[dev-dependencies]
criterion = "0.4"
pretty_env_logger = "0.4.0"

[[bench]]
name = "rw"
harness = false

[package.metadata.docs.rs]
features = ["x11rb-client", "x11rb-server", "x11rb-xcb", "xlib-client"]
