[package]
name = "xim-gen"
description = "XIM protocol parser generator"
version = "0.1.0"
authors = ["Riey <creeper844@gmail.com>"]
repository = "https://github.com/Riey/xim-rs"
edition = "2018"
license = "MIT"

[dependencies]
convert_case = "0.6"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
