[package]
name = "xim-gen"
description = "XIM protocol parser generator"
version = "0.1.2"
authors = ["Riey <creeper844@gmail.com>"]
repository = "https://github.com/Riey/xim-rs"
edition = "2021"
license = "MIT"
rust-version = "1.82"

[dependencies]
convert_case = "0.8"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
