[package]
name = "xim-parser"
description = "XIM protocl parser"
version = "0.1.0"
authors = ["Riey <creeper844@gmail.com>"]
repository = "https://github.com/Riey/xim-rs"
edition = "2018"
license = "MIT"

[features]
bootstrap = ["xim-gen"]

[dependencies]
thiserror = "1.0.22"
bitflags = "1.2.1"

[dev-dependencies]
xim-ctext = { path = "../xim-ctext", version = "0.1.0" }
pretty_assertions = "0.7.1"

[build-dependencies]
xim-gen = { path = "../xim-gen", optional = true, version = "0.1.0" }

