[package]
name = "xim-parser"
description = "XIM protocl parser"
version = "0.2.1"
authors = ["Riey <creeper844@gmail.com>"]
repository = "https://github.com/Riey/xim-rs"
edition = "2018"
license = "MIT"

[features]
default = ["std"]
std = []
bootstrap = ["xim-gen"]

[dependencies]
bitflags = { version = "1.3.2", default-features = false }

[dev-dependencies]
xim-ctext = { path = "../xim-ctext", version = "0.3.0" }
pretty_assertions = "1"

[build-dependencies]
xim-gen = { path = "../xim-gen", optional = true, version = "0.1.0" }

