[package]
name = "xim-parser"
description = "XIM protocl parser"
version = "0.2.2"
authors = ["Riey <creeper844@gmail.com>"]
repository = "https://github.com/Riey/xim-rs"
edition = "2021"
license = "MIT"
rust-version = "1.82"

[features]
default = ["std"]
std = []
bootstrap = ["xim-gen"]

[dependencies]
bitflags = { version = "2.4.0", default-features = false }

[dev-dependencies]
xim-ctext = { path = "../xim-ctext", version = "0.4.0" }
pretty_assertions = "1"

[build-dependencies]
xim-gen = { path = "../xim-gen", optional = true, version = "0.1.0" }
